# winf

./: .clang-format  .gitignore  .npmignore  .travis.yml  LICENSE.md  README.md  appveyor.yml  binding.gyp  index.d.ts  package-lock.json  package.json  winf.js
native/: Cargo.toml
native/src/: lib.rs
native/src/mac/: window.rs
src/: rect.cc  rect.h  window-info.cc  window-info.h  window-info.js  window-info_mac.cc  window-info_win.cc  winf.cc  winf_mac.cc  winf_win.cc
