[package]
name = "window-info"
version = "0.1.0"
authors = ["Greg"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "window_info"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.9.0"

[dependencies]
core-foundation = "0.9.1"
core-graphics = "0.22.2"
neon = "0.9.0"
